.next/dev/logs/next-development.log
[00:00:00.824] Server  LOG      ✓ Ready in 631ms
[00:00:04.689] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:00:19.294] Server  LOG      ✓ Compiled in 131ms
[00:00:26.341] Server  LOG      ✓ Compiled in 111ms
[00:00:34.821] Server  LOG      ✓ Compiled in 110ms
[00:00:38.614] Server  LOG      ✓ Compiled in 98ms
[00:00:41.889] Server  LOG      ✓ Compiled in 97ms
[00:00:45.859] Server  LOG      ✓ Compiled in 100ms
[00:00:55.018] Server  LOG      ✓ Compiled in 109ms
[00:00:57.827] Server  LOG      ✓ Compiled in 92ms
[00:03:26.784] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:03:37.140] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:04:36.035] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:05:05.507] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:05:41.345] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:06:15.059] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:07:20.516] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:11:53.597] Server  LOG      ✓ Compiled in 118ms
[00:11:59.959] Server  LOG      ✓ Compiled in 101ms
[00:12:12.685] Server  LOG      ✓ Compiled in 91ms
[00:12:45.999] Server  LOG      ✓ Compiled in 83ms
[00:12:46.104] Browser ERROR   ./app/globals.css:1978:1
Parsing CSS source code failed
  1976 |   z-index: 9999;
  1977 | }
> 1978 | (body.dark)::before {
       | ^
  1979 |   content: '';
  1980 |   position: fixed;
  1981 |   top: 0;

Invalid empty selector

Import trace:
  Client Component Browser:
    ./app/globals.css [Client Component Browser]
    ./app/layout.tsx [Server Component]
[00:12:54.614] Browser ERROR   ./app/globals.css
Error evaluating Node.js code
CssSyntaxError: /Users/poseidomhung/Documents/github/laravel-tw/app/globals.css:160:1: Unclosed bracket
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at Parser.unclosedBracket (turbopack:///[project]/node_modules/postcss/lib/parser.js:579:22)]
    [at Parser.other (turbopack:///[project]/node_modules/postcss/lib/parser.js:425:35)]
    [at Parser.parse (turbopack:///[project]/node_modules/postcss/lib/parser.js:472:16)]
    [at parse (turbopack:///[project]/node_modules/postcss/lib/parse.js:11:12)]
    [at new LazyResult (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:165:16)]
    [at Processor.process (turbopack:///[project]/node_modules/postcss/lib/processor.js:53:14)]
    [at transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:51)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:29)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:115:11)]

Import trace:
  Client Component Browser:
    ./app/globals.css [Client Component Browser]
    ./app/layout.tsx [Server Component]
[00:13:13.881] Server  LOG      ✓ Compiled in 108ms
[00:13:45.132] Server  LOG      ✓ Compiled in 91ms
[00:15:22.570] Server  LOG      ✓ Compiled in 126ms
[00:15:45.158] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:16:07.038] Server  LOG      ✓ Compiled in 108ms
[00:16:09.900] Server  LOG      ✓ Compiled in 87ms
[00:16:12.832] Server  LOG      ✓ Compiled in 101ms
[00:16:20.537] Server  LOG      ✓ Compiled in 80ms
[00:17:56.177] Server  LOG      ✓ Compiled in 62ms
[00:18:22.761] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:18:56.830] Server  LOG      ✓ Compiled in 40ms
[00:18:59.884] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:19:05.883] Server  LOG      ✓ Compiled in 19ms
[00:19:11.575] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:19:17.342] Server  LOG      ✓ Compiled in 43ms
[00:19:20.191] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:20:31.675] Server  LOG      ✓ Compiled in 126ms
[00:20:45.135] Server  LOG      ✓ Compiled in 118ms
[00:20:59.147] Server  LOG      ✓ Compiled in 112ms
[00:21:15.163] Server  LOG      ✓ Compiled in 106ms
[00:21:30.141] Server  LOG      ✓ Compiled in 111ms
